fix card size shifting when changing browser size

--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,26 @@ body {
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
+.card-links {
+    text-decoration: none;
+    color: var(--main-black);
+}
+
 .card img {
     object-fit: cover;
 }
 
 .card-title {
     font-size: 16px;
+    margin: 8px 0;
+}
+
+.card-subtitle {
+    margin: 0;
+}
+
+.card-rating {
+    margin-top: 8px;
 }
 
 .euro {
